# rinha-backend-2024-q1-python

./: .env.test  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  Makefile  README.md  REQUIREMENTS.md  docker-compose.dev.yaml  docker-compose.yaml  postgresql.conf  pyproject.toml  ruff.toml  script.sql
docs/rinhabackendcrebitossimulation-20240308221440508/: index.html  req_de-bitos-1025427916.html
docs/rinhabackendcrebitossimulation-20240308221440508-local/: req_cre-ditos-1306955929.html  req_extratos--1809255608.html  req_validac-o-es--40002687.html
docs/rinhabackendcrebitossimulation-20240308221440508-local/js/: all_sessions.js
docs/rinhabackendcrebitossimulation-20240308221440508/js/: global_stats.json  stats.js  stats.json
docs/rinhabackendcrebitossimulation-20240308225939098-official/: index.html  req_cre-ditos-1306955929.html  req_de-bitos-1025427916.html  req_extratos--1809255608.html  req_validac-o-es--40002687.html
docs/rinhabackendcrebitossimulation-20240308225939098-official/js/: all_sessions.js  global_stats.json  stats.json
nginx/: nginx.conf  nginx.dev.conf
postgresql/: ddl.sql  postgresql.conf  script.sql
src/rinha/: main.py
src/rinha/api/: dependencies.py
src/rinha/api/models/: __init__.py  healthcheck.py  request.py  response.py
src/rinha/api/routers/: clientes.py
src/rinha/config/: settings.py
src/rinha/database/: repository.py  schemas.py  transaction_repository.py  unit_of_work.py
src/rinha/database/orm/: models.py  session.py
src/rinha/domain/: schemas.py
src/rinha/domain/enums/: __init__.py  operation_type.py
src/rinha/domain/models/: __init__.py  client.py  transaction.py
src/rinha/models/: request.py
tests/: conftest.py  pytest.ini
tests/fixtures/: factories.py
tests/integration/: conftest.py
tests/integration/api/: test_clientes.py
tests/models/: test_request.py
tests/unit/: conftest.py
tests/unit/api/: test_clientes.py
tests/unit/api/models/: test_request.py
tests/unit/domain/models/: test_client.py
tests/utils/: asserts.py
