[tool.poetry]
name = "rinha"
version = "0.1.0"
description = ""
authors = ["Murilo Pupo de Oliveira <murilo.pupo@ymail.com>"]
readme = "README.md"
packages = [{include = "rinha", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.2"
pydantic = "^2.6.1"
uvicorn = {extras = ["standard"], version = "^0.27.0.post1"}


[tool.poetry.group.tests.dependencies]
pytest = "^8.0.0"
polyfactory = "^2.14.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
